<resources>
    <string name="app_name">BanHangLuuNiem</string>
    <string name="TenDangNhap">Tên Đăng Nhập</string>
    <string name="MatKhau">Mật Khẩu</string>
    <string name="NhapLaiMatKhau">Nhập Lại Mật Khẩu</string>
    <string name="NgaySinh">Ngày Sinh</string>
    <string name="cmnd">Chứng Minh Nhân Dân</string>
    <string name="Thoat">Thoát</string>
    <string name="DongY">Đồng Ý</string>
    <string name="DangNhap">Đăng Nhập</string>
    <string name="DangKy">Đăng Ký</string>
    <string name="Nu">Nữ</string>
    <string name="Nam">Nam</string>
    <string name="TODO">TODO</string>
    <string name="HOME">Home</string>
    <string name="action_profile">Thông Tin Cá Nhân</string>
    <string name="action_home">Trang chủ</string>
    <string name="action_recommend">Contacts</string>
    <string name="saveAccount">Lưu Thông Tin Đăng Nhập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">menu</string>

    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="todo">TODO</string>
    <string name="Doan">doan\n</string>
    <string name="YourName">Your Name\n</string>
    <string name="profile">Profile</string>
    <string name="about">Thông Tin</string>
    <string name="LogOut">Đăng Xuất\n</string>
    <string name="Gallery">Gallery</string>
    <string name="communication">Khác</string>
    <string name="Share">Chia Sẽ</string>
    <string name="Rate_us">Đánh Giá</string>
    <string name="Shopping">ShoppingDays\n</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="imgbanhang">imgBanHang</string>
    <string name="thongtincancapnhap">Thông tin cần cập nhật *</string>
    <string name="hovaten">Họ Và Tên</string>
    <string name="email">Email</string>
    <string name="sodienthoai">Số Điện thoại</string>
    <string name="diachi">Địa Chỉ</string>
    <string name="save_changed">Lưu</string>
    <string name="chinhsua">Chỉnh sửa</string>
    <string name="ngaysinh">Ngày sinh : </string>
    <string name="CCCD">Số Căn Cước :</string>
    <string name="Email">Email :</string>
    <string name="Hovaten">Họ Và Tên :</string>
    <string name="phone">Số Điện Thoại :</string>
    <string name="address">Địa Chỉ</string>
    <string name="hovatenH">Họ Và Tên :</string>
    <string name="emailH">Email :</string>
    <string name="deleted_account">Deleted Account</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Everyone</string>
    <string name="slide_1_desc">
    Chào mừng mọi người đến với trang web mua sắm của nhóm mình
    </string>

    <string name="slide_2_title">Discount</string>
    <string name="slide_2_desc">Mua Sắm với các mã khuyến mãi vô cùng hấp dẫn !!</string>

    <string name="slide_3_title">Shipping</string>
    <string name="slide_3_desc">Giao hàng nhanh chóng!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="themanh">Thêm Ảnh</string>
    <string name="themsanpham">Thêm Sản Phẩm</string>
    <string name="quanly">Quản lý</string>
    <string name="nhaptentheloai">Nhập tên thể loại</string>
    <string name="themtheloai">Thêm </string>
</resources>