<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/miHome"
            android:icon="@drawable/home_black"
            android:title="@string/action_home"/>

        <item
            android:id="@+id/miFavorite"
            android:icon="@drawable/icon_heart"
            android:title="Favorite"
            />
    </group>
    <item
        android:icon="@drawable/menu_black"
        android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/about" android:id="@+id/mnAbout" android:icon="@drawable/info_black"/>
                <item android:title="@string/LogOut" android:id="@+id/mnLogout" android:icon="@drawable/logout_black"/>

            </group>
        </menu>

    </item>
    <item
        android:icon="@drawable/menu_black"
        android:title="@string/quanly">
        <menu>
            <item android:title="Thêm Loại Sản Phẩm" android:id="@+id/mnThemLoaiSanPham" android:icon="@drawable/icon_product_category"/>
            <item android:title="@string/themsanpham" android:id="@+id/mnAddProduct" android:icon="@drawable/icon_add_product"/>
            <item android:title="@string/deleted_account" android:id="@+id/mnDLTAccount" android:icon="@drawable/icons_remove2_black" />

        </menu>

    </item>

</menu>