<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvYourName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size100dp"
            android:gravity="center"
            android:text="@string/YourName"
            android:textSize="@dimen/size50sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tvThongBao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10dp"
            android:text="@string/thongtincancapnhap"
            android:textColor="@color/dolv4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtHoVaTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size20dp"
                android:hint="@string/hovaten"
                android:autofillHints="name"
                android:inputType="text"
                android:background="@drawable/custom_edittext_about"
                android:padding="@dimen/size10dp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size20dp"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:inputType="text"
                android:background="@drawable/custom_edittext_about"
                android:padding="@dimen/size10dp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/edtSoDienThoai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size20dp"
                android:hint="@string/sodienthoai"
                android:autofillHints="phone"
                android:inputType="number"
                android:background="@drawable/custom_edittext_about"
                android:padding="@dimen/size10dp"/>

            <EditText
                android:id="@+id/edtDiaChi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size20dp"
                android:hint="@string/diachi"
                android:autofillHints="postalAddress"
                android:inputType="text"
                android:background="@drawable/custom_edittext_about"
                android:padding="@dimen/size10dp"/>

        </LinearLayout>
        <!-- Thông tin đã có từ bảng đăng nhập-->
        <LinearLayout
            android:id="@+id/lnThongTinDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ngaysinh"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/tvNgaySinh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnCCCDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size10dp">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CCCD"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/tvCCCD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"/>
            </LinearLayout>


        </LinearLayout>
        <!-- Thông tin để chỉnh sửa bảng đăng nhập-->
        <LinearLayout
            android:id="@+id/lnChinhSuaThongTinDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edtNgaySinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size20dp"
                android:hint="@string/NgaySinh"
                android:autofillHints="postalAddress"
                android:inputType="text"
                android:background="@drawable/custom_edittext_about"
                android:padding="@dimen/size10dp"
                tools:ignore="Suspicious0dp" />
            <EditText
                android:id="@+id/edtCMND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size10dp"
                android:hint="@string/cmnd"
                android:autofillHints="postalAddress"
                android:inputType="text"
                android:background="@drawable/custom_edittext_about"
                android:padding="@dimen/size10dp"
                tools:ignore="Suspicious0dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/size20dp">
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save_changed"
                android:textSize="@dimen/size20dp"
                android:textStyle="italic"
                android:background="@color/dolv2"
                tools:ignore="SpUsage" />
            <Button
                android:id="@+id/btnChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chinhsua"
                android:textSize="@dimen/size20dp"
                android:textStyle="italic"
                android:background="@color/dolv2"
                tools:ignore="SpUsage"
                android:layout_marginLeft="@dimen/size10dp"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>